// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Primary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  color: #fff;
  box-shadow: 0 0 1px 0 rgba(17,49,96,0.10),0 4px 8px 0 rgba(17,49,96,0.16);
  font-weight: 600;
  background: linear-gradient(-180deg,#5d9df5 0%,#176ce0 68%);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  background-size: 1px 52px;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:hover {
  background-position: 0px;
}

.c0:active {
  box-shadow: 0 0 6px 0 rgba(17,49,96,0.1),0 6px 12px 0 rgba(17,49,96,0.2);
}

.c1 {
  padding: 0 22px;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Button Primary With Icon 1`] = `
.c3 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #FFF;
}

.c3 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c2 {
  margin-right: 6px;
  padding: 7px;
  border-radius: 50%;
  height: 30px;
  width: 30px;
  text-align: center;
  background-color: rgba(0,0,0,0.16);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  color: #fff;
  box-shadow: 0 0 1px 0 rgba(17,49,96,0.10),0 4px 8px 0 rgba(17,49,96,0.16);
  font-weight: 600;
  background: linear-gradient(-180deg,#5d9df5 0%,#176ce0 68%);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  background-size: 1px 52px;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:hover {
  background-position: 0px;
}

.c0:active {
  box-shadow: 0 0 6px 0 rgba(17,49,96,0.1),0 6px 12px 0 rgba(17,49,96,0.2);
}

.c1 {
  padding: 0 22px;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
  <span
    className="c2"
  >
    <span
      className="c3"
      color="#FFF"
      size={16}
    >
      <svg
        data-file-name="SvgPlus"
      />
    </span>
  </span>
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 1px solid #dfe3ed;
  font-weight: 600;
  padding: 9px 22px 10px;
  color: #132144;
  line-height: 22px;
  background-color: #eef4f6d9;
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  background-size: 1px 42px;
  box-sizing: border-box;
  -webkit-transition: all ease 0.15s;
  transition: all ease 0.15s;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:hover,
.c0:active {
  background-color: #e0ebee;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Button Secondary With Icon 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c1 {
  height: 16px;
  width: 16px;
  margin-right: 16px;
  color: rgba(110,132,154,0.85);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 1px solid #dfe3ed;
  font-weight: 600;
  padding: 9px 22px 10px;
  color: #132144;
  line-height: 22px;
  background-color: #eef4f6d9;
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  background-size: 1px 42px;
  box-sizing: border-box;
  -webkit-transition: all ease 0.15s;
  transition: all ease 0.15s;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:hover,
.c0:active {
  background-color: #e0ebee;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c1"
  >
    <span
      className="c2"
      color="currentColor"
      size={16}
    >
      <svg
        data-file-name="SvgPlus"
      />
    </span>
  </span>
  Button
</button>
`;

exports[`Storyshots Button Tertiary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 0;
  padding: 0 22px;
  font-weight: 600;
  color: #5d9df5;
  box-shadow: none;
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:hover {
  background: rgba(93,157,245,0.1);
}

.c0:active {
  background: rgba(93,157,245,0.16);
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
>
  Button
</button>
`;
